--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@nativescript-community/plugin-seed",
-    "version": "0.0.1",
-    "description": "This is the description for the plugin seed. This is what will be published to NPM.",
-    "main": "./plugin-seed",
+    "name": "@nativescript-community/flutterwave",
+    "version": "1.0.0",
+    "description": "This is an easy plugin of the Flutterwave SDK for Android and iOS",
+    "main": "./flutterwave",
     "sideEffects": false,
-    "typings": "./plugin-seed.d.ts",
+    "typings": "./flutterwave.d.ts",
     "nativescript": {
         "platforms": {
             "android": "6.0.0",
@@ -19,14 +19,15 @@
         "Angular",
         "React",
         "Svelte",
-        "Vue"
+        "Vue",
+        "Flutterwave"
     ],
     "bugs": {
-        "url": "https://github.com/nativescript-community/plugin-seed/issues"
+        "url": "https://github.com/nativescript-community/flutterwave/issues"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/nativescript-community/plugin-seed"
+        "url": "https://github.com/nativescript-community/flutterwave"
     },
     "license": "Apache-2.0",
     "readmeFilename": "README.md"
